--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_mainprofile.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_mainprofile.xml
@@ -2,7 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_content"
+    android:id="@+id/mainprofile_parent_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.Mainprofile">
@@ -43,12 +43,12 @@
                 android:layout_marginTop="90dp"
                 android:src="@drawable/family_xxhdpi" />
 
-            <com.mikhaellopez.circularimageview.CircularImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="220dp"
-                android:layout_marginTop="175dp"
-                android:background="@drawable/family_xxhdpi" />
+            <ImageView
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_marginLeft="210dp"
+                android:layout_marginTop="165dp"
+                android:background="@drawable/profile_camera_circle" />
         </RelativeLayout>
 
         <android.support.design.widget.TabLayout
@@ -58,8 +58,7 @@
             app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
             app:tabIndicatorColor="#e00"
             app:tabSelectedTextColor="#e00"
-            app:tabTextColor="@color/grey"
-            />
+            app:tabTextColor="@color/grey" />
 
     </android.support.design.widget.AppBarLayout>
 
