--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_profile_About_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -25,7 +26,7 @@
         android:gravity="top"
         android:overScrollMode="always"
         android:paddingLeft="20dp"
-        android:paddingTop="15dp"
+        android:paddingTop="12dp"
         android:scrollbarStyle="insideInset"
         android:scrollbars="vertical"
         android:textColor="#000"
@@ -121,6 +122,15 @@
             android:background="#fff"
             android:gravity="center"
             android:textColor="#000" />
+
+        <Button
+            android:layout_width="70dp"
+            android:layout_height="42dp"
+            android:layout_below="@id/spinner"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="130dp"
+            android:background="@drawable/button_round"
+            android:text="ADD" />
 
     </RelativeLayout>
 </LinearLayout>
