--- a/MyCity4Kids/MyCity4Kids/res/drawable/selector_home_tab.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/selector_home_tab.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/tab5_selected" android:state_checked="true" />
-    <item android:drawable="@drawable/tab5_selected" android:state_pressed="true" />
-    <item android:drawable="@drawable/tab5" />
+    <item android:drawable="@drawable/home_red" android:state_checked="true" />
+    <item android:drawable="@drawable/home_red" android:state_pressed="true" />
+    <item android:drawable="@drawable/home_grey" />
 </selector>
