--- a/MyCity4Kids/MyCity4Kids/res/drawable/mainprofile_thin_border.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/mainprofile_thin_border.xml
@@ -5,6 +5,6 @@
         android:width="1dp"
         android:color="#A9A9A9" />
     <corners android:radius="5dp" />
-    <solid android:color="#fff" />
+    <solid android:color="@color/white" />
 
 </shape>
