--- a/MyCity4Kids/MyCity4Kids/res/drawable/kids_container_border.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/kids_container_border.xml
@@ -1,8 +1,8 @@
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
     <corners android:radius="5dp" />
+    <solid android:color="@color/white" />
     <stroke
         android:width="1dip"
         android:color="#A9A9A9" />
