--- a/MyCity4Kids/MyCity4Kids/res/layout/kids_info_new_custom_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/kids_info_new_custom_view.xml
@@ -4,7 +4,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/editKidsInfoTextView"
