--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
@@ -103,7 +103,7 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/kidsDOBTextView"
+            android:id="@+id/dobLabelTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="200dp"
@@ -146,10 +146,10 @@
             android:src="@drawable/arrowdownnew" />
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/date_picker"
+            android:id="@+id/kidsDOBTextView"
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:layout_below="@id/kidsDOBTextView"
+            android:layout_below="@id/dobLabelTextView"
             android:layout_marginBottom="18dp"
             android:layout_marginLeft="200dp"
             android:layout_marginStart="200dp"
